--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>To-Do lists</title>
-    </head>
-    <body>
-        <h1>Start a new To-Do list</h1>
-        <form method="POST" action="/lists/new">
-            <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-            {% csrf_token %}
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block header_text %}
+    Start a new To-Do list
+{% endblock %}
+
+{% block form_action %}
+    /lists/new
+{% endblock %}
